--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div id="home-explanations">
-  <div class="container">
+  <div class="container navbar-space">
     <h2>Batchka c'est ...</h2>
       <h3>Prendre 5 à 10 minutes, une fois par semaine, pour :</h3>
       <div class="row">
