add about link to navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,9 +60,11 @@
 .navbar-batchka-link {
   color: white;
   font-size: 14px;
+  padding-right: 15px;
+  text-transform: uppercase;
 }
 .navbar-batchka-link:hover {
-  color: $gray;
+  color: $orange;
   text-decoration: none;
 }
 
