move form to add ingredient from dayshow to menushow and fix ajax issue

--- a/app/assets/stylesheets/pages/_day.scss
+++ b/app/assets/stylesheets/pages/_day.scss
@@ -106,13 +106,13 @@
 
 .day-platdetail {
   position: absolute;
-  bottom: 0px;
+  bottom: 2px;
   right: 0px;
-  background-color: $dark-gray;
+  background-color: $orange;
   color: white !important;
   font-size: 0.8em;
-  padding-left: 2px;
-  padding-right: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 .day-eachplat {
