--- a/app/assets/stylesheets/pages/_ingredient.scss
+++ b/app/assets/stylesheets/pages/_ingredient.scss
@@ -53,6 +53,7 @@
     width: 100%;
   }
   input, select {
+    box-shadow: none;
     padding-left: 0px;
     padding-right: 0px;
     font-size: 0.8em;
