--- a/app/assets/stylesheets/pages/_day.scss
+++ b/app/assets/stylesheets/pages/_day.scss
@@ -63,28 +63,12 @@
 
 }
 
-.add_ingredient {
-  background-color: $blue;
-  margin-left: 0;
-  margin-right: 0;
-  button {
-    background-color: white;
-    border-radius: 50%;
-    margin-top: 1vh;
-  }
-  button .fas {
-    padding-top: 3px;
-    font-size: 1.5em;
-  }
-  .col-xs-2 {
-    padding-left: 0;
-  }
-
-}
 
 .ingredient-list {
-  color: $green;
-  border: 1px solid $green;
+  color: white;
+  background-color: $green;
+  font-size: 0.9em;
+  text-transform: uppercase;
   padding-left: 4px;
   padding-right: 4px;
   margin-right: 3px;
@@ -106,13 +90,18 @@
 
 .day-platdetail {
   position: absolute;
-  bottom: 2px;
-  right: 0px;
-  background-color: $orange;
+  bottom: 1px;
+  right: 1px;
+  background-color: $dark-gray;
   color: white !important;
   font-size: 0.8em;
   padding-left: 4px;
   padding-right: 4px;
+  opacity: 0.8;
+  border-radius: 2px;
+  &:active {
+    opacity: 1;
+  }
 }
 
 .day-eachplat {
