--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -6,7 +6,9 @@
   border-top: 2px solid $green;
   border-bottom: 2px solid $green;
   margin-bottom: 15px;
-  padding: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  padding-top: 0.5em;
   width: 100%;
   height: 100%;
   position: relative;
@@ -196,8 +198,8 @@
     width: 100%;
     margin-right: 0;
     margin-left: 0;
-    padding-bottom: 10px;
-    margin-bottom: 5px;
+
+    margin-bottom: 10px;
 
   }
 }
