--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -57,7 +57,7 @@
               </div>
 
               <%= render 'ingredients/formsimple', menu: @menu, day: plat.repa.day, repa: plat.repa, plat: plat %>
-                <%= link_to "+ DE DETAILS", menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id ), class: "day-platdetail"  %>
+                <%= link_to "+ INFOS", menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id ), class: "day-platdetail"  %>
             </div>
                       <% end %>
                     </div>
