add background color and box shadow to divs + css ingredients index

--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container navbar-space">
-  <h1>Mon menu</h1>
+  <div class="title">
+  <h1>Menu</h1>
   <h2>semaine du <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
+  </div>
   <div class="row">
     <% @days.each do |day| %>
 
