--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 /* Main navbar */
 .navbar-batchka {
-  background: white;
+  background: $light-gray;
   width: 100%;
   position: fixed;
   top: 0%;
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: space-between;
   z-index: 9;
+  border-top: 4px solid $blue;
 }
 
 .pages-home{
@@ -40,7 +41,7 @@
 .navbar-batchka .avatar {
   font-size: 2.5em;
   padding-right: 30%;
-  color: $orange;
+  color: $green;
 }
 
 /* Right section */
