--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -1,22 +1,29 @@
 body {
-  background-color: white;
+  background-color: $light-gray;
 }
 
+.title {
+  margin-bottom: 0vh;
+  margin-top: 0vh;
+  padding-bottom: 1.5vh;
+  padding-top: 1.5vh;
+  background-color: $blue;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
+}
 
 h1 {
   color: $green;
+  text-align: center;
   text-transform: uppercase;
   font-weight: bold;
-  margin-bottom: 0vh;
-  margin-top: 0vh;
 }
 
 h2 {
   text-transform: uppercase;
+  text-align: right;
   color: $dark-gray;
-
   font-size: 1.5em;
-  margin-top: 0vh;
+  font-weight: bold;
 }
 
 h3 {
