--- a/app/assets/stylesheets/pages/_ingredient.scss
+++ b/app/assets/stylesheets/pages/_ingredient.scss
@@ -22,10 +22,15 @@
 }
 
 .ingredient-card {
-  border: 1px solid $green;
+  background-color: $light-gray;
+
+  border-radius: 2px;
   padding-top: 5px;
   margin-bottom: 10px;
   color: $dark-gray;
+  input {
+    margin-left: 3px;
+  }
   .col-xs-4 {
     padding-right: 15px;
     padding-left: 0;
@@ -63,10 +68,7 @@
   .fas {
     margin-left: 3px;
   }
-  .stocking {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
+
   .col-xs-5 {
     padding-left: 20px;
     padding-right: 8px;
@@ -136,6 +138,61 @@
   .dayduelist {
     color: $dark-gray;
     font-size: 0.8em;
+  }
+}
+
+.button-displayplats {
+  color: $blue;
+  h2 {
+    font-weight: bold;
+    background-color: $blue;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-right: 0.5em;
+    width: 100%;
+    color: white;
+    letter-spacing: 2px;
+    line-height: 1.3;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+}
+
+.createtodo-div {
+  background-color: white;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
+  border-radius: 2px;
+  margin-bottom: 3em;
+  width: 100%;
+  height: 100%;
+}
+
+.createtodo-form {
+  h3 {
+    text-align: center;
+    padding-bottom: 0.5em;
+    padding-top: 0.5em;
+  }
+  .stocking {
+    padding-left: 14px;
+    padding-right: 0px;
+    border: 1px dashed $dark-gray;
+    height: 40px;
+    background-color: white;
+  }
+  .submit-buttons .fas {
+      padding: 5px;
+      border-radius: 50%;
+      border: 2px solid $orange;
+      background-color: white;
+      font-size: 1em;
+      height: 32px;
+      width: 32px;
+
+  }
+  .button-editplat {
+    padding-left: 0;
   }
 }
 
