--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -1,11 +1,15 @@
  /* menu index */
+.menus-index {
+  h1 {
+    margin-bottom: 1em;
+  }
+}
 
 .lastmenu {
-  background-color: transparent;
-  border: 1px dashed $green;
-  border-top: 2px solid $green;
-  border-bottom: 2px solid $green;
-  margin-bottom: 15px;
+  background-color: white;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
+  border-radius: 2px;
+  margin-bottom: 3em;
   padding-left: 0.5em;
   padding-right: 0.5em;
   padding-top: 0.5em;
@@ -157,16 +161,17 @@
   color: $dark-gray;
   font-size: 0.9em;
   padding-top: 0px;
-  border: 1px solid $blue;
   text-align: center;
   padding-left: 0;
   padding-right: 0;
   .repastype {
     font-weight: bold;
     background-color: $blue;
-    padding-top: 0;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     width: 100%;
     color: white;
+    letter-spacing: 2px;
     line-height: 1.3;
     margin-left: 0;
     margin-right: 0;
@@ -185,7 +190,7 @@
   }
 
   #plat_name, .plat_name, #plat_link, .plat_link {
-    font-size: 0.9em;
+    font-size: 1em;
     padding-left: 0;
     padding-right: 0;
     width: 100%;
@@ -237,4 +242,12 @@
     border-color: $green;
   }
 
+}
+
+.allplats-list {
+  display: none;
+}
+
+.allplats-display {
+  display: block;
 }
