--- a/app/assets/stylesheets/pages/_plat.scss
+++ b/app/assets/stylesheets/pages/_plat.scss
@@ -3,23 +3,26 @@
 .edit_platname {
   display: flex;
   justify-content: center;
-
-  input {
-    background-color: transparent;
+  margin-bottom: 0;
+  input, select {
+    background-color: white;
     border: none;
     border-bottom: 1px dashed $green;
     box-shadow: none;
     color: $green;
     text-transform: uppercase;
+    padding: 0;
 
   }
-  input:focus {
+  input:focus, select:focus {
     outline:none;
     box-shadow: none;
     background-color: transparent;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid $green;
 
 }
+
+
   .submit-buttons {
     padding-top: 20%;
   }
