--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -2,10 +2,8 @@
 
   <h1>Menus</h1>
 
-
-
-  <h2>Les derniers</h2>
   <div class="last-menus">
+    <h2>Les derniers</h2>
     <div class="row">
       <div class="col-xs-6 col-md-3">
 
@@ -78,9 +76,10 @@
     </div>
   </div>
 
-  <h2>Les idées</h2>
 
-  <div class="last-menus">
+
+  <div class="last-menus ideas-menus">
+    <h2>Les idées</h2>
     <div class="row">
       <% @menus.last(4).each do |m| %>
        <div class="col-xs-6 col-sm-3">
