css on menu and checklist

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@
   align-items: center;
   justify-content: space-between;
   z-index: 9;
-  border-top: 4px solid $blue;
+  border-top: 4px solid $orange;
 }
 
 .pages-home{
