--- a/app/assets/stylesheets/pages/_day.scss
+++ b/app/assets/stylesheets/pages/_day.scss
@@ -121,22 +121,25 @@
   margin-bottom: 1vh;
   margin-left: 0;
   margin-right: 0;
-  div {
-    padding-left: 5px;
-    padding-right: 5px;
-    display: flex;
-    align-items: center;
+
+  .finalmenu-plat {
+    ul {
+      margin-bottom: 0;
+      padding-top: 4px;
+    }
   }
+
   h3 {
-    text-transform: uppercase;
+    text-transform: lowercase;
     font-weight: bold;
     padding-left: 5px;
     padding-right: 5px;
-    font-size: 2vh;
+    font-size: 4vh;
     color: $green;
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 0.3vh ;
+    text-align: left;
 
   }
   .menu-plattype {
@@ -149,9 +152,11 @@
     padding-right: 5px;
   }
   .menu-platname {
+    text-align: right;
     margin-left: 3px;
-    font-size: 2vh;
+    font-size: 2.5vh;
     text-transform: uppercase;
+    align-self: flex-end;
   }
   .menu-platrecette {
     .fas {
