--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container navbar-space">
-<h1>Menu</h1>
+
 
   <div class="row todo-minheight">
+    <h1>Menu</h1>
     <% @days.each do |day| %>
       <% if day.plats.select{|plat| (plat.name != nil) && (plat.name != "") }.present? %>
       <div class="col-xs-12 col-sm-4">
@@ -11,14 +12,14 @@
             <% if repa.plats.select{|plat| (plat.name != nil) && (plat.name != "") }.present? %>
 
                   <div class="plat-finalmenu row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-4 finalmenu-repa">
                       <h3> <%= repa.repastype %></h3>
                     </div>
-                    <div class="col-xs-8">
+                    <div class="col-xs-8 finalmenu-plat">
                       <ul class="list-unstyled">
                         <% repa.plats.sort{ |x,y| x.id <=> y.id }.each do |plat| %>
                           <% if plat.name != nil  %>
-                            <li> <span class="menu-plattype"><%= plat.plattype %></span><span class="menu-platname"><%= plat.name %></span> <% if plat.link.present? %><span class="menu-platrecette"><%= link_to plat.link, target: :_blank do %><i class="fas fa-arrow-circle-right"></i> <%end %>
+                            <li class="menu-platname"><%= plat.name %><% if plat.link.present? %><span class="menu-platrecette"><%= link_to plat.link, target: :_blank do %><i class="fas fa-arrow-circle-right"></i> <%end %>
                               <% end %></span></li>
                           <% end %>
                         <% end %>
