css home page - display on one page of 100vh on mobile et desktop

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -25,8 +25,9 @@
 }
 
 .home-button-inscription {
-  margin-top: 3%;
-  margin-left: 60%;
+  margin-top: 10%;
+  display: flex;
+  justify-content: space-around;
 }
 
 
