--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -45,7 +45,7 @@
   <!-- Dropdown list appearing on mobile only -->
 
 <div class="navbar-batchka-bottom">
-  <div class="navbar-batchka-item hidden-md hidden-lg">
+  <div class="navbar-batchka-item-mobile hidden-md hidden-lg">
 
     <% if user_signed_in? %>
     <div class="dropup">
