--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -1,5 +1,15 @@
 body {
   background-color: $light-gray;
+  a:-webkit-any-link {
+    text-decoration: none;
+  }
+  a, button {
+   outline: 0;
+}
+
+a:hover, a:active, a:focus, button:hover, button:active, button:focus {
+  outline: 0;
+}
 }
 
 .title {
