--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -72,7 +72,7 @@
     height: 80px;
     padding: 10px;
     border-radius: 2px;
-    box-shadow: 1px 2px $dark-gray;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
     background-color: white;
   }
   h4 {
