--- a/app/assets/stylesheets/pages/_devise.scss
+++ b/app/assets/stylesheets/pages/_devise.scss
@@ -51,11 +51,19 @@
 
 .devise-sessions-new {
   .signin-btn {
-    margin-top: 25px;
+  height: 100%;
   }
   .signup-alignbuttons {
     margin-bottom: 25px;
     align-items: flex-start;
+  }
+  .boolean label {
+    width: 90%;
+    color: $dark-gray;
+    padding-left: 10px;
+  }
+  .other-session-action {
+    height: 37px;
   }
 }
 
