--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,7 +12,7 @@
   }
 }
 .banner h1 {
-  font-size: 45px;
+  font-size: 5vh;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   padding-left: 10px;
