--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="banner-content">
     <h1>Avec Batchka,<br>je simplifie la préparation de mes repas.</h1>
     <div class="home-buttons">
-    <a href="#home-explanations", class="home-button">Je découvre</a>
+    <a href="#home-explanations" class="home-button scroll-effect">Je découvre</a>
     </div>
   </div>
 </div>
@@ -14,19 +14,19 @@
       <h3>Prendre 10 minutes, une fois par semaine, pour :</h3>
       <div class="row">
         <div class="col-xs-4 home-card">
-          <div class="home-card-inside">
+          <div class="home-card-inside" data-aos="zoom-in">
           <div class="home-image"><%= cl_image_tag("dinner", width: 60, height: 60) %></div>
           <div> <h4> prévoir mon <strong>menu</strong> </h4></div>
           </div>
         </div>
       <div class="col-xs-4 home-card">
-        <div class="home-card-inside">
+        <div class="home-card-inside" data-aos="zoom-in">
         <div class="home-image"> <%= cl_image_tag("grocery", width: 60, height: 60) %> </div>
         <div> <h4> faire ma <strong>liste de courses</strong> </h4></div>
         </div>
       </div>
       <div class="col-xs-4 home-card">
-        <div class="home-card-inside">
+        <div class="home-card-inside" data-aos="zoom-in">
         <div class="home-image"> <%= cl_image_tag("to-do", width: 60, height: 60) %> </div>
         <div> <h4> <strong>planifier</strong> ce que je peux préparer, pour m'avancer </h4></div>
         </div>
@@ -35,19 +35,19 @@
     <h3>Pourquoi ? </h3>
     <div class="row">
         <div class="col-xs-4 home-card">
-          <div class="home-card-inside">
+          <div class="home-card-inside" data-aos="zoom-in">
           <div class="home-image"><%= cl_image_tag("clock", width: 60, height: 60) %></div>
           <div> <h4> gagner du <strong>temps</strong> </h4></div>
           </div>
         </div>
       <div class="col-xs-4 home-card">
-        <div class="home-card-inside">
+        <div class="home-card-inside" data-aos="zoom-in">
         <div class="home-image"> <%= cl_image_tag("coins", width: 60, height: 60) %> </div>
         <div> <h4> moins <strong>gaspiller</strong></h4></div>
         </div>
       </div>
       <div class="col-xs-4 home-card">
-        <div class="home-card-inside">
+        <div class="home-card-inside" data-aos="zoom-in">
         <div class="home-image"> <%= cl_image_tag("brain", width: 60, height: 60) %> </div>
         <div> <h4>ne plus me <strong>casser la tête</strong> tous les soirs </h4></div>
         </div>
