add gradient color to home page and can't modify a menu when you didn't created it

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,7 @@ $red: #EE5F5B;
 $blue: #a9ccbf;
 $yellow: #FDB631;
 $orange: #ff9f8c;
-$green: #4D9078;
+$green: #748e88;
 $dark-gray: #A9A9A9;
 $gray: #cacfd6;
 $light-gray: hsl(0%, 0%, 96%);
