--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
       <div class="col-xs-4 home-card">
         <div class="home-card-inside" data-aos="zoom-in">
         <div class="home-image"> <%= cl_image_tag("to-do", width: 60, height: 60) %> </div>
-        <div> <h4> <strong>planifier</strong> ce que je peux préparer, pour m'avancer </h4></div>
+        <div> <h4> <strong>planifier</strong> tout ce que je peux</h4></div>
         </div>
       </div>
     </div>
@@ -49,7 +49,7 @@
       <div class="col-xs-4 home-card">
         <div class="home-card-inside" data-aos="zoom-in">
         <div class="home-image"> <%= cl_image_tag("brain", width: 60, height: 60) %> </div>
-        <div> <h4>ne plus me <strong>casser la tête</strong> tous les soirs </h4></div>
+        <div> <h4>être plus <strong>serein</strong> serein le soir</h4></div>
         </div>
       </div>
     </div>
