--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -3,13 +3,17 @@
   h1 {
     margin-bottom: 1em;
   }
+  h2 {
+    text-align: left;
+    letter-spacing: 0.1em;
+  }
 }
 
 .lastmenu {
   background-color: white;
   box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
   border-radius: 2px;
-  margin-bottom: 3em;
+  margin-bottom: 2vh;
   padding-left: 0.5em;
   padding-right: 0.5em;
   padding-top: 0.5em;
@@ -42,7 +46,7 @@
   justify-content: space-around;
   padding-top: 3vh;
   padding-bottom: 10px;
-  margin-bottom: 5vh;
+
 }
 
 .link-menu1 {
@@ -113,6 +117,7 @@
   width: 10vh;
   padding-left: 5px;
   padding-right: 5px;
+  text-align: right;
   text-transform: uppercase;
   font-size: 0.8em;
   color: $blue;
