--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,7 +1,13 @@
 <div class="container navbar-space">
   <div class="title">
+  <div class="row">
+    <div class="col-xs-5 col-md-3 col-md-offset-3 title-menu">
   <h1>Menu</h1>
-  <h2>semaine du <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
+  </div>
+  <div class="col-xs-6 col-md-3 title-menu">
+  <h2> <span class="semaine-menu">semaine du</span> <br> <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
+</div>
+  </div>
   </div>
   <div class="row">
     <% @days.each do |day| %>
@@ -21,7 +27,8 @@
                   <div class="col-xs-12 col-sm-4">
                 <% end %>
                     <div class="lastmenu display_repa">
-                      <p class="repastype"> <%= repa.repastype.upcase %></p>
+                      <p class="repastype button-displayplats"> <%= repa.repastype.upcase %></p>
+                      <div class="display-card-plat">
                       <% repa.plats.sort{ |x,y| x.id <=> y.id }.each do |plat| %>
                         <div class="edit_platname">
                           <%= simple_form_for([@menu, plat], url: menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id), method: :put, remote: true) do |f| %>
@@ -33,10 +40,10 @@
                                 <div class="col-xs-8 edit-input">
                                   <%= f.input :name, label: false %>
                                 </div>
-                                <div class="plattype-platname col-xs-4">
+                                <div class="plattype-platname col-xs-4 button-displayplats">
                                   <i class="fas fa-link"></i>
                                 </div>
-                                <div class="col-xs-8 edit-input">
+                                <div class="col-xs-8 edit-input plat-form-link">
                                   <%= f.input :link, placeholder: "Lien vers la recette", label: false %>
                                 </div>
                               </div>
@@ -62,6 +69,7 @@
                 <%= link_to "+ INFOS", menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id ), class: "day-platdetail"  %>
             </div>
                       <% end %>
+                      </div>
                     </div>
                   </div>
               <% end %>
